[project]
name = "arxivory"
version = "0.5.0"
description = "A command-line tool for searching arXiv papers using natural language queries with semantic search powered by Cohere embeddings and reranking"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rafid Al-Humaimidi", email = "rafidka@gmail.com" }
]
keywords = ["arxiv", "search", "semantic", "papers", "research", "ai", "nlp", "cohere"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "cohere>=4.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/rafidka/arxivory"
Repository = "https://github.com/rafidka/arxivory"
Issues = "https://github.com/rafidka/arxivory/issues"
Documentation = "https://github.com/rafidka/arxivory#readme"

[project.scripts]
arxivory = "arxivory:main.app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.10",
]

[tool.pyright]
reportMissingImports = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 88
target-version = "py312"
include = [
    "src/arxivory/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "C90",
    "UP",
    "I",
    "D",
]
isort = { combine-as-imports = true, known-first-party = ["arxivory"] }
mccabe = { max-complexity = 15 }
ignore = [
    "D100", # ignore missing docstring in module
    "D102", # ignore missing docstring in public method
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D107", # ignore missing docstring in __init__ methods
    "D200", # ignore one-line docstring should not be in multi-line format
    "D212", # ignore multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"docs/**/*.py" = ["D"]
